--- a/dts/bindings/pcie/controller/brcm,brcmstb-pcie.yaml
+++ b/dts/bindings/pcie/controller/brcm,brcmstb-pcie.yaml
@@ -1,4 +1,5 @@
-# Copyright (c) 2024 Junho Lee <junho@tsnlab.com>
+# Copyright 2024 TSNLab, Inc.
+
 # SPDX-License-Identifier: Apache-2.0
 
 description: BRCMSTB PCIe controller
