Refactor PCIe init functions

--- a/dts/arm64/broadcom/bcm2712.dtsi
+++ b/dts/arm64/broadcom/bcm2712.dtsi
@@ -125,6 +125,10 @@
 				 <0x43000000 0x4 0x0 0x1c 0x0 0x03 0x00000000>,
 				 <0x02000000 0x0 0x0 0x1f 0x0 0x00 0x00400000>;
 			status = "okay";
+			ranges = <0x0 0x0 0x410000 0x1f 0x0 0x0 0x4000>,
+				 <0x0 0x0 0x0 0x1f 0x0 0x0 0x400000>,
+				 <0x0 0x0 0x400000 0x1f 0x0 0x0 0x4000>,
+				 <0x2000000 0x0 0x0 0x1f 0x0 0x0 0x400000>;
 
 			rp1 {
 				#address-cells = <2>;
