WIP: Modify rp1 driver to use PCIe APIs

--- a/dts/arm64/broadcom/bcm2712.dtsi
+++ b/dts/arm64/broadcom/bcm2712.dtsi
@@ -132,6 +132,7 @@
 				 //<0x0 0x0 0x0 0x1f 0x0 0x0 0x400000>,
 				 //<0x0 0x0 0x400000 0x1f 0x0 0x0 0x4000>,
 				 //<0x2000000 0x0 0x0 0x1f 0x0 0x0 0x400000>;
+			status = "okay";
 
 			rp1 {
 				#address-cells = <2>;
@@ -139,9 +140,9 @@
 
 				gpio0: gpio@1f000d0000 {
 					compatible = "simple-bus";
-					reg = <0x1f 0xd0000 0x30000>;
 					#address-cells = <1>;
 					#size-cells = <0>;
+					reg = <0x1f 0xd0000 0x30000>;
 
 					gpio0_0: gpio@0 {
 						compatible = "raspberrypi,rp1-gpio";
